[metadata]
name = PyFileSender
version = 0.0.1
description = This package will help to send file into mobile or other computer
long_description = file: README.md
url = https://github.com/vubon/pyfi
author = Vubon Roy
author_email = vubon.roy@gmail.com
license = MIT
classifiers =
    Environment :: Python Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find: